--- a/package.json
+++ b/package.json
@@ -39,23 +39,35 @@
     "dev": "snowpack dev",
     "prod": "snowpack build",
     "build": "pika build",
+    "test": "BABEL_ENV=test jest",
     "pika:publish": "pika publish --no-tests --no-2fa",
     "version": "yarn build"
   },
   "dependencies": {
-    "date-fns": "^2.16.1",
+    "date-fns": "^2.17.0",
     "stimulus": "^2.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.11.6",
-    "@babel/plugin-syntax-class-properties": "7.10.4",
-    "@babel/preset-env": "7.11.5",
+    "@babel/core": "7.12.16",
+    "@babel/plugin-syntax-class-properties": "7.12.13",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.12.16",
     "@pika/pack": "0.5.0",
     "@pika/plugin-build-node": "0.9.2",
     "@pika/plugin-build-web": "0.9.2",
     "@pika/plugin-standard-pkg": "0.9.2",
-    "@snowpack/plugin-babel": "2.1.3",
+    "@snowpack/plugin-babel": "2.1.6",
+    "@testing-library/dom": "^7.29.6",
+    "@types/jest": "^26.0.20",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
+    "mutationobserver-shim": "^0.3.7",
     "prettier-standard": "16.4.1",
     "snowpack": "2.14.0"
+  },
+  "jest": {
+    "setupFiles": [
+      "<rootDir>/jest/jest-setup.js"
+    ]
   }
 }
