--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
-  "presets": ["@babel/env"],
-  "plugins": [
-    "@babel/plugin-proposal-class-properties"
-  ]
+  "presets": [
+    "@babel/env",
+    "@babel/preset-typescript"
+  ],
+  "plugins": ["@babel/plugin-transform-typescript"]
 }
