--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "publish": "np --no-2fa"
   },
   "dependencies": {
-    "date-fns": "^2.21.1",
-    "stimulus": "^2.0.0"
+    "date-fns": "^2.21.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
@@ -43,8 +42,12 @@
     "mutationobserver-shim": "^0.3.7",
     "np": "^7.5.0",
     "prettier-standard": "16.4.1",
+    "stimulus": "^2.0.0",
     "typescript": "^4.2.4",
     "vite": "^2.2.4"
+  },
+  "peerDependencies": {
+    "stimulus": "^2.0.0"
   },
   "jest": {
     "setupFiles": [
