--- a/package.json
+++ b/package.json
@@ -30,26 +30,26 @@
     "np": "np --no-2fa"
   },
   "dependencies": {
-    "date-fns": "^2.21.1"
+    "date-fns": "^2.24.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.0",
+    "@babel/core": "^7.15.5",
     "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.14.1",
-    "@babel/preset-typescript": "^7.13.0",
-    "@testing-library/dom": "^7.30.4",
-    "@types/jest": "^26.0.23",
-    "babel-jest": "^26.6.3",
-    "jest": "^26.6.3",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-typescript": "^7.15.0",
+    "@hotwired/stimulus": "^3.0.0",
+    "@testing-library/dom": "^8.6.0",
+    "@types/jest": "^27.0.2",
+    "babel-jest": "^27.2.2",
+    "jest": "^27.2.2",
     "mutationobserver-shim": "^0.3.7",
     "np": "^7.5.0",
     "prettier-standard": "16.4.1",
-    "stimulus": "^2.0.0",
-    "typescript": "^4.2.4",
-    "vite": "^2.2.4"
+    "typescript": "^4.4.3",
+    "vite": "^2.5.10"
   },
   "peerDependencies": {
-    "stimulus": "^2.0.0"
+    "@hotwired/stimulus": "^3.0.0"
   },
   "jest": {
     "setupFiles": [
