--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "homepage": "https://github.com/stimulus-components/stimulus-timeago",
   "private": false,
   "main": "dist/stimulus-timeago.umd.js",
-  "module": "dist/stimulus-timeago.es.js",
+  "module": "dist/stimulus-timeago.mjs",
   "scripts": {
     "format": "prettier-standard  '**/*.{ts,css,html}' --format",
     "lint": "prettier-standard  '**/*.{ts,css,html}' --lint",
@@ -33,23 +33,27 @@
     "date-fns": "^2.29.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.6",
+    "@babel/core": "^7.20.7",
     "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
-    "@hotwired/stimulus": "^3.1.0",
-    "@testing-library/dom": "^8.19.0",
-    "@types/jest": "^27.4.0",
-    "babel-jest": "^27.4.6",
-    "jest": "^27.4.7",
+    "@hotwired/stimulus": "^3.2.1",
+    "@testing-library/dom": "^8.19.1",
+    "@types/jest": "^29.2.4",
+    "autoprefixer": "^10.4.13",
+    "babel-jest": "^29.3.1",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "mutationobserver-shim": "^0.3.7",
     "np": "^7.6.2",
+    "postcss": "^8.4.20",
     "prettier-standard": "16.4.1",
-    "typescript": "^4.8.4",
-    "vite": "^2.7.13"
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.4",
+    "vite": "^4.0.3"
   },
   "peerDependencies": {
-    "@hotwired/stimulus": "^3.0.0"
+    "@hotwired/stimulus": "^3.2.1"
   },
   "jest": {
     "setupFiles": [
