--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stimulus-timeago",
+  "name": "@stimulus-components/timeago",
   "version": "4.1.0",
   "description": "A Stimulus controller that returns the distance between the given date and now in words.",
   "keywords": [
@@ -17,47 +17,61 @@
   "license": "MIT",
   "homepage": "https://github.com/stimulus-components/stimulus-timeago",
   "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "dist/stimulus-timeago.umd.js",
   "module": "dist/stimulus-timeago.mjs",
+  "types": "dist/types/index.d.ts",
   "scripts": {
-    "format": "prettier-standard  '**/*.{ts,css,html}' --format",
-    "lint": "prettier-standard  '**/*.{ts,css,html}' --lint",
+    "lint": "tsc --noEmit && eslint --ext .js,.mjs,.ts . && prettier . --check",
+    "lintfix": "eslint --ext .js,.mjs,.ts . --fix && prettier . --write",
+    "types": "tsc --noEmit false --declaration true --emitDeclarationOnly true --outDir dist/types",
     "dev": "vite",
     "prod": "vite build --mode netlify",
-    "build": "tsc --noEmit && vite build",
+    "build": "vite build && yarn types",
     "version": "yarn build",
     "test": "BABEL_ENV=test jest",
     "np": "np --no-2fa"
   },
   "dependencies": {
-    "date-fns": "^2.29.3"
+    "date-fns": "^3.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.7",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-typescript": "^7.18.6",
-    "@hotwired/stimulus": "^3.2.1",
-    "@testing-library/dom": "^8.19.1",
-    "@types/jest": "^29.2.4",
-    "autoprefixer": "^10.4.13",
-    "babel-jest": "^29.3.1",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
+    "@babel/core": "7.24.3",
+    "@babel/polyfill": "7.12.1",
+    "@babel/preset-env": "7.24.3",
+    "@babel/preset-typescript": "7.24.1",
+    "@hotwired/stimulus": "^3",
+    "@testing-library/dom": "^9.3.4",
+    "@types/jest": "^29.5.12",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
+    "autoprefixer": "10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "17.1.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-n": "16.6.2",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-standard": "5.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "mutationobserver-shim": "^0.3.7",
-    "np": "^7.6.2",
-    "postcss": "^8.4.20",
-    "prettier-standard": "16.4.1",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.3"
+    "np": "9.2.0",
+    "postcss": "8.4.38",
+    "prettier": "3.2.5",
+    "tailwindcss": "3.4.1",
+    "typescript": "^5.4.3",
+    "vite": "5.2.3"
   },
   "peerDependencies": {
-    "@hotwired/stimulus": "^3.2.1"
+    "@hotwired/stimulus": "^3.0.0"
   },
   "jest": {
     "setupFiles": [
-      "<rootDir>/jest/jest-setup.js"
+      "<rootDir>/jest/jest-setup.ts"
     ]
   }
 }
